syntax = "proto2";

package analysis;

message Init {
    required uint32 interval = 1;
    required uint32 duration = 2;
    repeated string netInt = 3;    
};

message Data {
    required int64 time = 1;
    required string netInt = 2;
    
    optional double rstAvg = 3;
    optional double rstMin = 4;
    optional double rstMax = 5;
    optional double rstClient = 6;

    optional double tp = 7;

    optional double errRate = 8;
    optional double errRateMin = 9;
    optional double errRateMax = 10;
    optional double errRateClient = 11;

    optional double reqRate = 12;
    optional double reqRateMin = 13;
    optional double reqRateMax = 14;
    optional double reqRateClient = 15;

    optional double connRate = 16;
    optional double connRateMin = 17;
    optional double connRateMax = 18;
    
    repeated Conn conns = 19;

    repeated Freq client = 20;
    repeated Freq req_path = 21;
    repeated Freq req_method = 22;
    repeated Freq req_type = 23;
    repeated Freq rsp_status = 24;
};

message Conn {
    required uint32 ip = 1;
    required uint32 port = 2; 
}

message Freq {
    required string name = 1;
    required double freq = 2; 
}